tests/syntactic/input/input.err
Warning: Deprecated input qualifier was used in relation A in file input.dl at line 1
.decl A(x:number) input input
^-----------------------------
Error: input qualifier already set in file input.dl at line 1
.decl A(x:number) input input
------------------------^-----
1 errors generated, evaluation aborted
